# vgi-useragent

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-entrypoint.sh
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  check-version.sh  preprocess-require.awk  run-integration.sh
crates/useragent-wasm/: Cargo.toml
crates/useragent-wasm/src/: lib.rs
crates/useragent-worker/: Cargo.toml
crates/useragent-worker/src/: arrow_io.rs  lib.rs  main.rs  meta.rs  useragent.rs
crates/useragent-worker/src/scalar/: fields.rs  mod.rs  parse.rs  version.rs
crates/useragent-worker/tests/: parse.rs
test/sql/: parse.test
wasm/: build.sh  main.c
