[workspace]
resolver = "2"
members = ["crates/useragent-worker"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
repository = "https://github.com/Query-farm/vgi-useragent"

[workspace.dependencies]
# VGI Rust SDK (worker side), published on crates.io. Pulls in vgi-rpc 0.2 and
# arrow 58 transitively; keep arrow/vgi-rpc here in lockstep with vgi's pins so a
# single arrow/vgi-rpc resolves.
vgi = "0.6.0"
vgi-rpc = { version = "0.4.0", default-features = false, features = ["macros", "http"] }
arrow-array = "58"
arrow-buffer = "58"
arrow-schema = "58"

# User-Agent parsing: the uap-rust implementation of ua-parser, backed by the
# uap-core `regexes.yaml`. Pure regex matching, no native deps. We embed the
# bundled `regexes.yaml` at compile time (see crates/useragent-worker/data) so
# the worker binary is fully self-contained — no external file at runtime.
# `once_cell` compiles the (immutable) parser exactly once per process.
uaparser = "0.6.4"
once_cell = "1"

[profile.release]
opt-level = 2
