[workspace]
resolver = "2"
members = [
    "crates/useragent-worker",
    "crates/useragent-wasm",
]
# useragent-wasm only makes sense for wasm32-unknown-emscripten (it is a
# staticlib whose ring ops are supplied by emcc's --js-library), so keep it out
# of the default set: bare `cargo build` / `test` / `clippy` stay native-only and
# unchanged. Build it explicitly with `wasm/build.sh` or `-p useragent-wasm`.
default-members = ["crates/useragent-worker"]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.97"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
repository = "https://github.com/Query-farm/vgi-useragent"

[workspace.dependencies]
# VGI Rust SDK (worker side), published on crates.io. 0.24 provides the wasm
# `vgi::wasm_worker!` macro used by useragent-wasm; requires rustc 1.97 (see
# rust-version above). Base (feature-less) so each target can opt in: the native
# build takes the SDK's real defaults (`sqlite` + `transport-http`), while the
# wasm build must NOT — tokio/mio/axum and bundled SQLite do not compile for
# wasm32, and the browser transport serves over a byte channel rather than HTTP.
vgi = { version = "0.24", default-features = false }
vgi-rpc = { version = "0.16", default-features = false, features = ["macros"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-schema = "59"

# User-Agent parsing: the uap-rust implementation of ua-parser, backed by the
# uap-core `regexes.yaml`. Pure regex matching, no native deps. We embed the
# bundled `regexes.yaml` at compile time (see crates/useragent-worker/data) so
# the worker binary is fully self-contained — no external file at runtime.
# `once_cell` compiles the (immutable) parser exactly once per process.
uaparser = "0.6.4"
once_cell = "1"

[profile.release]
opt-level = 2
