[package]
name = "useragent-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Browser (emscripten) build of the useragent VGI worker, served over a SharedArrayBuffer channel"
publish = false

# staticlib: emcc links this into the Web Worker module (see build.sh). Cargo
# never emits a .wasm for it directly.
[lib]
name = "useragent_wasm"
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
useragent-worker = { path = "../useragent-worker" }
vgi = { workspace = true }
