[package]
name = "useragent-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "VGI worker parsing HTTP User-Agent strings into browser / OS / device for DuckDB over Apache Arrow"

[[bin]]
name = "useragent-worker"
path = "src/main.rs"

[dependencies]
vgi.workspace = true
vgi-rpc.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
uaparser.workspace = true
once_cell.workspace = true
serde_json = "1"
log = "0.4"
env_logger = "0.11"
