[package]
name = "useragent-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "VGI worker parsing HTTP User-Agent strings into browser / OS / device for DuckDB over Apache Arrow"

[lib]
name = "useragent_worker"
path = "src/lib.rs"

[[bin]]
name = "useragent-worker"
path = "src/main.rs"

[dependencies]
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
uaparser.workspace = true
once_cell.workspace = true
serde_json = "1"
log = "0.4"

# --- Native ---------------------------------------------------------------
# The SDK's real default features — unchanged from before the wasm split.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
vgi = { workspace = true, features = ["sqlite", "transport-http"] }
vgi-rpc = { workspace = true, features = ["http"] }
env_logger = "0.11"

# --- wasm32 ---------------------------------------------------------------
# No sqlite (C) and no HTTP transport (tokio/mio/axum); the bincode stream codec
# is what the SAB byte-channel transport needs. No env_logger.
[target.'cfg(target_arch = "wasm32")'.dependencies]
vgi = { workspace = true }
vgi-rpc = { workspace = true, features = ["stream-codec"] }
